<resources>
    <string name="app_name">Digitaler Schulhof</string>
    <string name="schulhof">Schulhof</string>
    <string name="website">Website</string>
    <string name="profil">Profil</string>
    <string name="benutzername">Benutzername</string>
    <string name="passwort">Passwort</string>
    <string name="speichern">Speichern</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="shortcut_aus">Diese Verknüpfung steht nicht zur Verfügung.</string>
    <string name="stundenplan_kurz">Stundenplan</string>
    <string name="stundenplan_lang">Mein Stundenplan</string>
    <string name="richtige_schule">Es muss die richtige Schule ausgewählt werden!</string>
</resources>
