<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_schulhof">

    <fragment
        android:id="@+id/navigation_schulhof"
        android:name="com.dsh.digitalerschulhof.SchulhofFragment"
        android:label="@string/schulhof"
        tools:layout="@layout/fragment_schulhof" />

    <fragment
        android:id="@+id/navigation_website"
        android:name="com.dsh.digitalerschulhof.WebsiteFragment"
        android:label="@string/website"
        tools:layout="@layout/fragment_website" />

    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.dsh.digitalerschulhof.ProfilFragment"
        android:label="@string/profil"
        tools:layout="@layout/fragment_profil" />
</navigation>